# Konserve

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust-clippy.yml
src/: backup.rs  helpers.rs  main.rs  restore.rs  zigffi.rs
zig-archiver/: build.zig  build.zig.zon
zig-archiver/src/: cli.zig  lib.zig  main.zig
