[package]
name = "Konserve"
version = "0.1.5"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
eframe = "0.32.0"
dotenv = "0.15.0"
image = "0.25.6"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
tar = "0.4.44"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
embed-resource = "3.0.3"

[profile.release]
strip = true

[profile.dev]
panic = "unwind"
