[package]
name = "Konserve"
version = "0.1.11"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.45"
dirs = "6.0.0"
eframe = "0.35.0"
dotenv = "0.15.0"
png = "0.18.1"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"
tar = "0.4.46"
uuid = { version = "1.23.4", features = ["v4"] }

[dependencies.windows]
version = ">=0.59, <=0.62"
features = ["Win32_Foundation", "Win32_System_RestartManager"]

[build-dependencies]
embed-resource = "3.0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "unwind"
